--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Days\Day1.cs" />
+    <Compile Include="Days\Day5.cs" />
     <Compile Include="Days\Day2.cs" />
     <Compile Include="Days\AbstractDay.cs" />
     <Compile Include="Days\Day3.cs" />
@@ -65,6 +66,7 @@
   <ItemGroup>
     <Content Include="Inputs\Day2.txt" />
     <Content Include="Inputs\Day4.txt" />
+    <Content Include="Inputs\Day5.txt" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
