--- a/AdventOfCode.Tests/AdventOfCode.Tests.csproj
+++ b/AdventOfCode.Tests/AdventOfCode.Tests.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Day1Test.cs" />
+    <Compile Include="Tests\Day7Test.cs" />
     <Compile Include="Tests\Day6Test.cs" />
     <Compile Include="Tests\Day4Test.cs" />
     <Compile Include="Tests\Day2Test.cs" />
@@ -49,6 +50,7 @@
     <Content Include="TestInputs\Day2SecondExample.txt" />
     <Content Include="TestInputs\Day4FirstExample.txt" />
     <Content Include="TestInputs\Day4SecondExample.txt" />
+    <Content Include="TestInputs\Day7FirstExample.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AdventOfCode\AdventOfCode.csproj">
